Vendor name change

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rkb/helper",
+    "name": "rhishi-kesh/helper",
     "description": "Laravel helper package",
     "type": "library",
     "license": "MIT",
