--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,9 @@
     "require": {
         "php": "^8.1",
         "illuminate/support": "^10.0|^11.0|^12.0"
-    }
+    },
+
+    "minimum-stability": "stable",
+    "prefer-stable": true
+    
 }
