--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,9 @@
 
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0|^11.0|^12.0"
+        "illuminate/support": "^10.0|^11.0|^12.0",
+        "illuminate/database": "^10.0|^11.0|^12.0",
+        "illuminate/filesystem": "^10.0|^11.0|^12.0"
     },
 
     "minimum-stability": "stable",
